feat(backend): support user login, add auth and cors middlewares
