# backend/openapi/model_user.go
@@ -1,0 +1,43 @@
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+/*
+ * ZK Ticketing API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 0.0.1
+ */
+
+package openapi
+
+
+import (
+	"time"
+)
+
+
+
+type User struct {
+
+	Id string `json:"id,omitempty"`
+
+	Email string `json:"email,omitempty"`
+
+	IdentityCommitment string `json:"identity_commitment,omitempty"`
+
+	EncryptedInternalNullifier string `json:"encrypted_internal_nullifier,omitempty"`
+
+	EncryptedIdentitySecret string `json:"encrypted_identity_secret,omitempty"`
+
+	CreatedAt time.Time `json:"created_at,omitempty"`
+}
+
+// AssertUserRequired checks if the required fields are not zero-ed
+func AssertUserRequired(obj User) error {
+	return nil
+}
+
+// AssertUserConstraints checks if the values respects the defined constraints
+func AssertUserConstraints(obj User) error {
+	return nil
+}
